# notebooks

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  vercel.json
.github/workflows/: cd.yml  ci.yml  deploy.yml  test.yml
archive/: _quarto.yml  index.qmd
archive/2017/12-December/15/better-web-browser/: _metadata.yml  index.ipynb
archive/2018/05-May/08/django-order-by-conditional-expressions/: _metadata.yml  index.ipynb
archive/2018/09-Septemeber/05/pandas-slugify/: _metadata.yml  index.ipynb
archive/2018/11-November/02/f-strings/: _metadata.yml  index.ipynb
archive/2021/10-October/12/pushing-daisies-age/: README.md  _metadata.yml  index.ipynb  notebook.ipynb
archive/2021/10-October/13/pride-and-zombies/: README.md  _metadata.yml  index.ipynb  notebook.ipynb
archive/2022/12-December/myles-life-vercel-redirects/: Notebook.ipynb
scripts/: test-notebooks.sh
wip/: .gitignore
wip/advant-of-code-2022/: README.md  day-01.ipynb  day-02.ipynb  day-03.ipynb  day-04.ipynb  day-05.ipynb
wip/advent-of-code-2015/: day-01.ipynb  day-02.ipynb
wip/bitcoin-abuse-analysis/: notebook.ipynb
wip/bitcoin-abuse-analysis/output/: bitcoin-abuse-reports.csv
wip/flickr-data-exploration/: README.md  account-data.ipynb  photos-and-videos.ipynb
wip/music-and-tensorflow/: notebook.ipynb  notebook.tex
wip/music-and-tensorflow/lyrics/: not-moving-to-portland-john-roderick.txt
wip/music-and-tensorflow/output/: vocab.tsv
wip/pride-and-zombies/: .gitignore  notebook.ipynb
wip/toronto-street-tree-data/: .gitignore  README.md  exploration.ipynb
wip/worldle/: Notebook.ipynb
wip/yelp-dataset-exploration/: .gitignore  Exploration.ipynb  shared.py
(+15 files in other folders)
