[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]

[tool.poetry.dependencies]
python = "3.9.16"
geopandas = "*"
importlib-metadata = "*"
ipython = "*"
ipywidgets = "*"
jupyterlab = "*"
jupyterlab-git = "*"
lazy-myles = {git = "https://github.com/myles/lazy-myles.git", rev = "main"}
numpy = "*"
pandas = "*"
