[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]

[tool.poetry.dependencies]
python = "3.9.16"
geopandas = "*"
importlib-metadata = "*"
ipython = "*"
ipywidgets = "*"
jupyterlab = "*"
jupyterlab-git = "*"
lazy-myles = {git = "https://github.com/myles/lazy-myles.git", rev = "main"}
matplotlib = "^3.7.1"
nbconvert = "^7.2.10"
numpy = "*"
pandas = "*"
python-slugify = {extras = ["unidecode"], version = "^8.0.1"}
selenium = "^4.8.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
